--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.15.4",
     "mongoose": "^5.0.16",
+    "pm2": "^3.0.3",
     "redis": "^2.8.0"
   },
   "devDependencies": {
@@ -17,7 +18,8 @@
   },
   "scripts": {
     "test": "mocha --timeout 10000",
-    "start": "nodemon ./app.js"
+    "start": "nodemon app.js",
+    "prod": "pm2 start --no-daemon app.js"
   },
   "author": "Gabriel Noguchi",
   "license": "ISC"
